done my part added my pages and linked all pages together as they should be

--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -58,7 +58,7 @@
                   <p>Aesthetic and restorative dental care designed to improve your smile and oral health.</p>
               </div>
           </a>
-          <a href="dermatology.html">
+          <a href="dermatology-section.html">
               <div class="card">
                   <!-- <img src="imgs/theeth2.jpg" height="50px" alt="Dermatology"> -->
                   <i class="fas fa-allergies" style="font-size: 50px;"></i>
