--- a/dermatology-section.html
+++ b/dermatology-section.html
@@ -69,7 +69,7 @@
           <img src="images/Dermatology 1 .jpg" alt="doctor1" class="doctor-image" />
         </div>
         <div class="doctor-info">
-          <a href="dentist-doc1.html"> Dr.Leen Mohamed</a>
+          <a href="dermatologist-doc1.html"> Dr.Leen Mohamed</a>
           <p class="description">Treats eczema and chronic skin conditions with care.</p>
           <div class="rating">
             <!--stars-->
@@ -89,7 +89,7 @@
             <img src="images/Dermatology 3.jpg" alt="doctor1" class="doctor-image" />
           </div>
           <div class="doctor-info">
-            <a href="dentist-doc2.html"> Dr.Sherif Samir</a>
+            <a href="dermatologist-doc2.html"> Dr.Sherif Samir</a>
             <p class="description">Creates personalized treatment plans for every skin type and concern.</p>
             <div class="rating">
               <!--stars-->
@@ -109,7 +109,7 @@
               <img src="images/Dermatology 2 .jpg" alt="doctor1" class="doctor-image" />
             </div>
             <div class="doctor-info">
-              <a href="dentist-doc3.html"> Dr.Maha Fahmy </a>
+              <a href="dermatologist-doc3.html"> Dr.Maha Fahmy </a>
               <p class="description"> Improves the appearance of scars, burns, and old skin injuries.</p>
               <div class="rating">
                 <!--stars-->
