--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,12 @@
     <div class="header">
         <div class="links">
             <div class="left-links">
-                <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+                <a href="bodyFooter.html" class="logo"><img src="images/clinic1.png"></a>
             </div>
             <div class="right-links">
                 <a href="contact.html" class="contact-header">Contact us</a>
+                <a href="bodyFooter.html" class="services-header">Services</a>
                 <a href="login.html" class="log-in">Login</a>
-
                 <label class="switch">
                     <input type="checkbox">
                     <span class="slider">
