--- a/dental-section.html
+++ b/dental-section.html
@@ -49,15 +49,12 @@
     </div>
 
     <!--Search Bar-->
-    <form>
+    <form id="searchForm">
       <div class="search">
         <span class="search-icon material-symbols-outlined">search</span>
-        <input
-          class="search-input"
-          type="search"
-          placeholder="Search for a doctor..."
-        />
+        <input class="search-input" type="search" id="searchInput" placeholder="Search for a doctor...">
       </div>
+      <div id="searchResults" class="search-results"></div>
     </form>
 
     <!-- Main Title -->
@@ -160,6 +157,49 @@
         chatbox.style.display =
           chatbox.style.display === "flex" ? "none" : "flex";
       }
+    </script>
+    <script>
+      
+  const doctors = [
+    { name: "Dr. Ahmed Salem", url: "cardiologist-doc1.html" },
+    { name: "Dr. Tarek Elkhateb", url: "cardiologist-doc2.html" },
+    { name: "Dr. Reem Elharby", url: "cardiologist-doc3.html" }
+  ];
+
+  const input = document.getElementById("searchInput");
+  const resultsContainer = document.getElementById("searchResults");
+
+  input.addEventListener("input", function () {
+    const query = this.value.toLowerCase();
+    resultsContainer.innerHTML = ""; // تفضية النتائج
+
+    if (query.trim() === "") {
+      return;
+    }
+
+    const filtered = doctors.filter(doctor => doctor.name.toLowerCase().includes(query));
+
+    if (filtered.length === 0) {
+      resultsContainer.innerHTML = "<p style='padding:10px'>No doctor found</p>";
+      return;
+    }
+
+    filtered.forEach(doctor => {
+      const link = document.createElement("a");
+      link.href = doctor.url;
+      link.textContent = doctor.name;
+      resultsContainer.appendChild(link);
+    });
+  });
+
+  // لو المستخدم ضغط خارج البحث نخفي القائمة
+  document.addEventListener("click", function (e) {
+    if (!document.getElementById("searchForm").contains(e.target)) {
+      resultsContainer.innerHTML = "";
+    }
+  });
+
+
     </script>
   </body>
 </html>
