finished the log in page and debugged the website

--- a/Registration.html
+++ b/Registration.html
@@ -98,6 +98,14 @@
         </div>
     </div>
 
+    <div class="popup" id="fill-elements">
+        <div class="popup-content">
+            <h3>Registration Failed</h3>
+            <p>please fill all the fields</p>
+            <button onclick="closePopup()">Close</button>
+        </div>
+    </div>
+
     <script src="js/registration.js"></script>
 </body>
 </html>
