--- a/cardiology.html
+++ b/cardiology.html
@@ -152,7 +152,7 @@
 
   input.addEventListener("input", function () {
     const query = this.value.toLowerCase();
-    resultsContainer.innerHTML = ""; // تفضية النتائج
+    resultsContainer.innerHTML = ""; 
 
     if (query.trim() === "") {
       return;
@@ -173,7 +173,6 @@
     });
   });
 
-  // لو المستخدم ضغط خارج البحث نخفي القائمة
   document.addEventListener("click", function (e) {
     if (!document.getElementById("searchForm").contains(e.target)) {
       resultsContainer.innerHTML = "";
