--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <div class="right-links">
                 <a href="contact.html" class="contact-header">Contact us</a>
                 <a href="bodyFooter.html" class="services-header">Services</a>
-                <a href="login.html" class="log-in" style="color:#4e9fcf;">Login</a>
+                <a href="login.html" class="log-in" >Login</a>
                 <label class="switch">
                     <input type="checkbox">
                     <span class="slider">
