--- a/Registration.html
+++ b/Registration.html
@@ -18,7 +18,7 @@
             </div>
             <div class="right-links">
                 <a href="contact.html" class="contact-header">Contact us</a>
-                <a href="login.html" class="log-in" style="color:#4e9fcf;">Login</a>
+                <a href="login.html" class="log-in" >Login</a>
                 <label class="switch">
                     <input type="checkbox">
                     <span class="slider">
