--- a/dental-section.html
+++ b/dental-section.html
@@ -35,7 +35,7 @@
         <div class="right-links">
           <a href="contact.html" class="contact-header">Contact us</a>
           <a href="#serv" class="services-header">Services</a>
-          <a href="#" class="log-in" style="color:#4e9fcf;">Login</a>
+          <a href="#" class="log-in" >Login</a>
 
           <label class="switch">
             <input type="checkbox" />
