--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <div class="right-links">
                 <a href="contact.html" class="contact-header">Contact us</a>
                 <a href="bodyFooter.html" class="services-header">Services</a>
-                <a href="login.html" class="log-in" >Login</a>
+                <a href="login.html" class="log-in">Login</a>
                 <label class="switch">
                     <input type="checkbox">
                     <span class="slider">
@@ -116,7 +116,7 @@
                     Visit us at one of our medical centers.
                 </p>
                 <br>
-                <a href="https://maps.app.goo.gl/8cfpipUveDTxZBP7A">Our location</a>
+                <a href="https://maps.app.goo.gl/8cfpipUveDTxZBP7A" target="_blank">Our location</a>
 
             </div>
 
