--- a/dermatology-section.html
+++ b/dermatology-section.html
@@ -53,7 +53,7 @@
     </form>
 
     <!-- Main Title -->
-    <h1 class="main-title">welcome to Dermatology section</h1>
+    <h1 class="main-title">welcome to Dermatology section <i class="fas fa-allergies" style="font-size: 50px;"></i></h1>
 
     <p class="subtitle">
         Our clinic is your top destination for healthy, beautiful skin.
