--- a/pediatrics-section.html
+++ b/pediatrics-section.html
@@ -53,7 +53,7 @@
     </form>
 
     <!-- Main Title -->
-    <h1 class="main-title">Welcome to Pediatrics Section</h1>
+    <h1 class="main-title">Welcome to Pediatrics Section <i class="fas fa-baby-carriage" style="font-size: 50px;"></i></h1>
     <p class="subtitle">
         From First Giggles to First Steps, We are Here to Care for Your Child.
     </p>
