uploaded the font

--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -8,6 +8,9 @@
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
     <link href="css/all.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="css/header.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
 <body>
   <!-- Header Section -->
